...

  Scaffold(
      topBar = { ScaffoldTopBar(navigation = navigation, label = "Settings") },
      bottomBar = { NavigationBar(navigation) }) { paddingValues ->
        Box(
            modifier =
                Modifier.testTag("UserProfileSettings")
                    .padding(paddingValues)
                    .fillMaxSize()
                    .padding(start = 30.dp, end = 30.dp, top = 0.dp, bottom = 0.dp)) {
              Column {
                Spacer(modifier = Modifier.height(50.dp))

...
                      FilledTonalButton(
                          modifier =
                              Modifier.size(
                                      width = (LocalConfiguration.current.screenWidthDp * 0.30).dp,
                                      height =
                                          (LocalConfiguration.current.screenHeightDp * 0.06).dp)
                                  .testTag("ProfilePrivacyButton"),
                          onClick = {
                            setIsPrivate(!isPublic)
                            var privacy = userProfile.profilePrivacy
                            if (!isPublic) {
                              privacy = 0
                            } else {
...
                          state = buttonState,
                          modifier =
                              Modifier.size(
                                      width = (LocalConfiguration.current.screenWidthDp * 0.30).dp,
                                      height =
                                          (LocalConfiguration.current.screenHeightDp * 0.06).dp)
                                  .testTag("PathVisibilityButton"),
                          onClick = {
                            setButtonState((buttonState + 1) % 3)

                            val itinPrivacy = (buttonState + 1) % 3
                            val newProfile =
                                UserProfile(
...
                      FilledTonalButton(
                          modifier =
                              Modifier.size(
                                      width = (LocalConfiguration.current.screenWidthDp * 0.30).dp,
                                      height =
                                          (LocalConfiguration.current.screenHeightDp * 0.06).dp)
                                  .testTag("LogOutButton"),
                          onClick = {
                            val context = MainActivity.applicationContext()
                            GoogleAuthenticator().signOut(context)
                            // Go back to the main profile page
                            navigation.goBack()
                            // Go to the home screen per default when restarting the app
...
